# NeuroShell

./: .gitignore  README.md
executor/: Cargo.toml
executor/src/: executor.rs  inference.rs  llm.rs  main.rs
finetune/: export_model.py  finetune.py  inference_server.py  prepare_data.py  requirements.txt
finetune/data/: commands.jsonl
