[package]
name = "neuroshell"
version = "0.1.0"
edition = "2021"
description = "Natural language terminal command executor powered by a fine-tuned LLM"

[[bin]]
name = "neuroshell"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
chrono = "0.4"

[profile.release]
opt-level = 3
strip = "symbols"
