[package]
name = "neuroshell"
version = "0.2.0"
edition = "2021"
description = "Natural language terminal command executor powered by a fine-tuned LLM (self-contained)"

[[bin]]
name = "neuroshell"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# JSON (for model config.json)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Timestamp in output file
chrono = "0.4"

# File watching (--watch mode)
notify = "6.1"
notify-debouncer-mini = "0.4"

# LLM inference — pure Rust, no Python or C++ required
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Tokenizer (loads tokenizer.json produced by HuggingFace)
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

[profile.release]
opt-level = 3
strip = "symbols"
